--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <style>
+            #test {
+                color: var(--test-color);
+            }
+        </style>
     </head>
     <body>
+        <p id="test">Hello I'm a test!</p>
     </body>
 </html>
